# neo4j-aws-manufacturing

./: .gitignore  CLAUDE.md  CONFIG.txt  ORIGINAL_TEMPLATE.md  README.md  TEMPLATE.md  UPDATE.md  update-plan.md
Lab_0_Sign_In/: README.md
Lab_1_Aura_Setup/: Aura_Free_Trial.md  README.md
Lab_1_Aura_Setup/data/: manufacturing_demo.backup  manufacturing_demo.dump
Lab_1_Aura_Setup/slides/: 01-intro.md  02-what-youll-build.md  03-why-graphs.md  04-neo4j-aura.md  05-aura-for-ai.md  06-aura-tools.md  07-lab-steps-1.md  08-lab-steps-2.md  09-explore.md  10-summary.md
Lab_2_Aura_Agents/: README.md
Lab_2_Aura_Agents/slides/: 01-intro.md  02-problem-agents-solve.md  03-what-is-aura-agent.md  04-tools-overview.md  05-cypher-templates.md  06-similarity-search.md  07-text2cypher.md  08-lab-steps.md  09-adding-tools.md  10-testing.md  11-agent-reasoning.md  12-summary.md
Lab_4_Intro_to_Bedrock_and_Agents/: README.md  basic_langgraph_agent.ipynb  load_sample_data.py  sample_manufacturing_data.txt
Lab_4_Intro_to_Bedrock_and_Agents/permission-test-notebook/: test_bedrock_permissions.ipynb
Lab_4_Intro_to_Bedrock_and_Agents/slides/: 01-intro.md  02-sagemaker-setup.md  03-amazon-bedrock.md  04-bedrock-python.md  05-what-is-agent.md  06-react-pattern.md  07-langgraph.md  08-building-graph.md  09-defining-tools.md  10-tool-descriptions.md  11-binding-tools.md  12-summary.md
Lab_5_GraphRAG/: 01_data_loading.ipynb  02_embeddings.ipynb  03_vector_retriever.ipynb  04_vector_cypher_retriever.ipynb  05_fulltext_search.ipynb  06_hybrid_search.ipynb  README.md  data_utils.py  manufacturing_data.txt
Lab_5_GraphRAG/slides/: 01-intro.md  02-genai-promise.md  03-llm-limitations.md  04-solution-context.md  05-traditional-rag.md  06-traditional-rag-limits.md  07-graphrag-solution.md  08-document-chunk.md  09-chunking.md  10-embeddings.md  11-vector-indexes.md  12-vector-retriever.md  13-vector-cypher.md  14-expanded-context.md  15-graphrag-class.md  16-summary.md
Lab_5_GraphRAG/src/: pyproject.toml
Lab_6_Neo4j_MCP_Agent/: README.md  neo4j_langgraph_mcp_agent.ipynb  neo4j_strands_mcp_agent.ipynb
Lab_6_Neo4j_MCP_Agent/slides/: 01-intro.md  14-summary.md  (+12 more)
Lab_7_Aura_Agents_API/: README.md  aura_agent_client.ipynb
TransformedData/: DATA_ARCHITECTURE.md  architecture.excalidraw  arrows_data_model  changes.csv  changes_requirements.csv  components.csv  components_requirements.csv  defects.csv  manufacturing-data-model.excalidraw  milestones.csv  product_technology_domains.csv  products.csv  requirements.csv  requirements_test_sets.csv  requirements_test_sets_milestone.csv  technology_domains.csv  technology_domains_components.csv  test_case_defect.csv  test_cases.csv  test_sets.csv  test_sets_test_cases.csv
setup/: README.md
setup/populate/: .env.example  PROPOSAL.md  pyproject.toml
setup/populate/src/populate_manufacturing_db/: config.py  embedder.py  formatting.py  loader.py  main.py  samples.py  schema.py  test_queries.py
setup/solutions_bedrock/: pyproject.toml
setup/solutions_bedrock/src/graphrag_validator/: config.py  data.py  main.py  retrievers.py
setup/solutions_openai/: pyproject.toml
setup/solutions_openai/src/manufacturing_agent/: agent.py  config.py  main.py
(+10 files in other folders)
