[project]
name = "populate-manufacturing-db"
version = "0.1.0"
description = "Standalone Neo4j Aura data loader for the Manufacturing Product Development dataset"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.17.0",
    "boto3>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
populate-manufacturing-db = "populate_manufacturing_db.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/populate_manufacturing_db"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
