[project]
name = "manufacturing-agent"
version = "0.1.0"
description = "LangChain + OpenAI agent recreating the Lab 2 Aura Agent for manufacturing analysis"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.0",
    "langchain-neo4j>=0.3.0",
    "langgraph>=0.2.0",
    "neo4j>=5.17.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
manufacturing-agent = "manufacturing_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manufacturing_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
